--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -2,16 +2,16 @@
   "current": "Default",
   "presets": {
     "Default": {
-      "logo_width": 90,
+      "logo_width": 100,
       "color_schemes": {
         "scheme-1": {
           "settings": {
             "background": "#FFFFFF",
             "background_gradient": "",
             "text": "#121212",
-            "button": "#121212",
+            "button": "#1878b9",
             "button_label": "#FFFFFF",
-            "secondary_button_label": "#121212",
+            "secondary_button_label": "#1878b9",
             "shadow": "#121212"
           }
         },
@@ -39,8 +39,8 @@
         },
         "scheme-4": {
           "settings": {
-            "background": "#121212",
-            "background_gradient": "",
+            "background": "#1878b9",
+            "background_gradient": "radial-gradient(rgba(0, 0, 0, 1), rgba(46, 46, 46, 1) 72%, rgba(69, 69, 69, 1) 100%)",
             "text": "#FFFFFF",
             "button": "#FFFFFF",
             "button_label": "#121212",
@@ -70,7 +70,7 @@
       "spacing_grid_vertical": 8,
       "buttons_border_thickness": 1,
       "buttons_border_opacity": 100,
-      "buttons_radius": 0,
+      "buttons_radius": 6,
       "buttons_shadow_opacity": 0,
       "buttons_shadow_horizontal_offset": 0,
       "buttons_shadow_vertical_offset": 4,
@@ -84,7 +84,7 @@
       "variant_pills_shadow_blur": 5,
       "inputs_border_thickness": 1,
       "inputs_border_opacity": 55,
-      "inputs_radius": 0,
+      "inputs_radius": 6,
       "inputs_shadow_opacity": 0,
       "inputs_shadow_horizontal_offset": 0,
       "inputs_shadow_vertical_offset": 4,
@@ -149,8 +149,10 @@
       "drawer_shadow_horizontal_offset": 0,
       "drawer_shadow_vertical_offset": 4,
       "drawer_shadow_blur": 5,
+      "menu_type_desktop": "dropdown",
+      "sticky_header_type": "on-scroll-up",
       "badge_position": "bottom left",
-      "badge_corner_radius": 40,
+      "badge_corner_radius": 6,
       "sale_badge_color_scheme": "scheme-5",
       "sold_out_badge_color_scheme": "scheme-3",
       "social_twitter_link": "",
@@ -164,10 +166,11 @@
       "social_vimeo_link": "",
       "predictive_search_enabled": true,
       "predictive_search_show_vendor": false,
-      "predictive_search_show_price": false,
+      "predictive_search_show_price": true,
       "currency_code_enabled": true,
-      "cart_type": "notification",
-      "show_vendor": false,
+      "cart_type": "drawer",
+      "show_vendor": true,
+      "show_vendor_drawer": false,
       "show_cart_note": false,
       "cart_drawer_collection": "",
       "sections": {
