Change default settings

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -50,7 +50,7 @@
         },
         "scheme-5": {
           "settings": {
-            "background": "#334FB4",
+            "background": "#2295e2",
             "background_gradient": "",
             "text": "#FFFFFF",
             "button": "#1878b9",
